--- a/css/styles.css
+++ b/css/styles.css
@@ -372,9 +372,9 @@ table.rezultate {
     font-size:  0.9em;
 }
 table.rezultate td, .rezultate th {
-    padding: 1px 5px;
-    border:  1px solid #777;
-    overflow: hidden;
+    padding:     1px 5px;
+    border:      1px solid #777;
+    overflow:    hidden;
     white-space: nowrap;
 }
 table.rezultate th {
@@ -567,11 +567,13 @@ canvas {
     display:     block;
 }
 .titluri {
-    font-weight: 400;
-    position:    relative;
-    left:        30em;
-    color:       lightgreen;
-    font-size:   1.1em;
+    font-weight:   400;
+    display:       block;
+    position:      relative;
+    color:         #BBB;
+    font-size:     1.3  em;
+    font-family:   inherit;
+    margin-bottom: 10px;
 }
 .ascuns {
     display: none;
@@ -721,7 +723,6 @@ canvas {
 #total_valoare {
     /*display:    inline-block;*/
 }
-
 
 /*input[type="checkbox"] {*/
 /*position: relative;*/
