--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ nav {
     font-family:      'Roboto Condensed', sans-serif;
     font-weight:      400;
 }
-li, header, footer, label, input[readonly], div.ddm {
+li, header, footer, label, input[readonly], div.ddm, span {
     -webkit-touch-callout: none;
     -webkit-user-select:   none;
     -khtml-user-select:    none;
@@ -493,8 +493,8 @@ table#stat_clienti tr:nth-child(2n+1) .cH {
     background-color: hsla(0, 0%, 25%, 1);
 }
 .w1 {
-    max-width: 3em;
-    min-width: 3em;
+    max-width: 5em;
+    min-width: 5em;
 }
 .w2 {
     max-width: 20em;
@@ -511,6 +511,22 @@ table#stat_clienti tr:nth-child(2n+1) .cH {
 .w5, .w6, .wM {
     max-width: 6.5em;
     min-width: 5em;
+}
+.sortable {
+    cursor: pointer;
+}
+
+.sorted-up, .sorted-down {
+    color: hsla(200, 100%, 75%, 1);
+}
+
+.sorted-up span {
+    background:    url("../images/sorted_up.png") no-repeat 100% 60%;
+    padding-right: 20px;
+}
+.sorted-down span {
+    background:    url("../images/sorted_down.png") no-repeat 100% 60%;
+    padding-right: 20px;
 }
 form td, th {
     padding-top:    7px;
@@ -571,7 +587,7 @@ canvas {
     display:       block;
     position:      relative;
     color:         #BBB;
-    font-size:     1.3  em;
+    font-size:     1.3em;
     font-family:   inherit;
     margin-bottom: 10px;
 }
